# editor

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
Debug/: Makefile  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile
Debug/src/.deps/: exmainwindow.Po  exmenubar.Po  exwindow.Po  main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  definitions.h  definitions.h~  editor  ex_scrolled_window.c  ex_scrolled_window.c~  ex_scrolled_window.h  ex_scrolled_window.h~  exmainwindow.c  exmainwindow.c~  exmainwindow.h  exmenubar.c  exmenubar.c~  exmenubar.h  exmenubar.h~  extoolbar.c  extoolbar.c~  extoolbar.h  extoolbar.h~  main.c
src/.deps/: ex_scrolled_window.Po  exmainwindow.Po  exmenubar.Po  extoolbar.Po  main.Po
